Fix overflow issue

--- a/previewer.css
+++ b/previewer.css
@@ -19,7 +19,7 @@ body {
 
 /* Button to close previewer */
 #previewer-close {
-	position: absolute;
+	position: fixed;
 	width: 3vw;
 	height: 3vw;
 	border-bottom-left-radius: 3vw;
@@ -33,7 +33,7 @@ body {
 
 /* 'x' inside the close button */
 #previewer-close>span {
-	position: absolute;
+	position: fixed;
 	font-size: 1.5vw;
 	font-weight: bold;
 	color: white;
@@ -58,8 +58,8 @@ body {
 
 /* Transperant page fade */
 #previewer-fade {
-	background-color: rgba(0,0,0,0.25);
-	position: absolute;
+	background-color: rgba(0,0,0,0.5);
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100vw;
